Fix spacing

--- a/web-ui/src/App.css
+++ b/web-ui/src/App.css
@@ -64,6 +64,7 @@ body {
 @media (max-width: 320px) {
   .start-stop-container {
     flex-direction: row;
+    margin-top: 15px;
   }
 }
 
